# pyrastr

./: README.md  pyproject.toml
docs/: index.md
src/pyrastr/: dynamic.py  pyrastr.py
